k8s/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jeogram-app
  namespace: jeogram
spec:
  type: ClusterIP
  selector:
    app: jeogram-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: ws
      port: 8081
      targetPort: 8081
